# detectron-ft

./: .env.dist  .gitignore  README.md  bulk_detect.py  conv_utils.py  converters.py  dataset.py  frame.py  grid_train.py  iou_curve.py  iou_curve_draw.py  main.py  params.json  pyproject.toml  sample.py  test_adapter.py  test_augmentation_visual.py  test_converters.py  train.py  validate_iou.py  validate_single_image.py  visualize_dataset.py  xyxy_conv.py
detectron/: augmentations.py  losses.py  trainer.py
