[project]
name = "detectron-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentationsx>=2.0.14",
    "mlflow>=3.7.0",
    "opencv-python>=4.12.0.88",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "shapely>=2.0.0",  # Required for polygon clipping in AddFrame augmentation
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]
